<resources>
    <string name="app_name">Hungry Grocery Delivery Boy</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sing">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="spinner_title">Select Area</string>

    <string name="pic_myslf">Pickup Myself</string>
    <string name="ename">Enter Name</string>
    <string name="ehouse">Enter House No</string>
    <string name="esociety">Enter Society</string>
    <string name="elandmark">Enter Landmark</string>
    <string name="epincode">Enter Pincode</string>
    <string name="epassword">Enter Password</string>
    <string name="econfirm">Enter Confirm</string>
    <string name="mispassword">Mismatch Password</string>
    <string name="applycou">Apply Coupons</string>
    <string name="sorrycounpon">Sorry this coupon code is not applied</string>
    <string name="efeedback">Enter FeedBack</string>
    <string name="giverating">Give Rating</string>
    <string name="logout">Logout</string>
    <string name="excelimit">Exceeded the limit </string>
    <string name="emobileno">Enter Mobile No</string>
    <string name="notification">Notification</string>
    <string name="notificationdetails">Notification Details</string>
    <string name="evalisemail">Enter Valid Email</string>
    <string name="evalidmobile">Enter Valid mobile</string>
    <string name="plaseselctrates">Pleas select Rates..</string>
    <string name="referearn"><![CDATA[Refer & Earn]]></string>
    <string name="mobile_numberalreadyregistered">Mobile Number Already Registered</string>
    <string name="wallethistory">Wallet History</string>
    <string name="wallet">Wallet</string>
    <string name="addressnotf">Address Not Found!!</string>
    <string name="cartempty">Cart Empty</string>
    <string name="remove"> is Remove</string>
    <string name="delete">Delete</string>
    <string name="doyouwantdelete">Do you want to Delete</string>
    <string name="cancel">cancel</string>
    <string name="items">Items</string>
    <string name="placedordernow">Placed Order Now</string>
    <string name="mimiordervalof">Minimum order value of </string>
    <string name="orderid">Order ID:</string>
    <string name="areyousurecancel">Are you sure cancel this order ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="itemx"> item x </string>
    <string name="updateareas">Please Update Your Area Name.Because It\'s Not match with Our Delivery Location</string>
    <string name="plaseaddyour">Please add your address </string>
    <string name="hello">Hello </string>
    <string name="seemore">See More</string>
    <string name="address_type">Address Type</string>
    <string name="home_no">Home No</string>
    <string name="society">Society</string>
    <string name="area">Area</string>
    <string name="landmark">Landmark</string>
    <string name="pincode">Pincode</string>
    <string name="save">Save</string>
    <string name="enter_new_password">Enter New Password?</string>
    <string name="confirm_password">confirm password</string>
    <string name="submit">Submit</string>
    <string name="please_take_a_minute_to_write_a_review">Please take a minute to write a review</string>
    <string name="type_feedback">Type feedback..</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="we_will_send_you_the_6_digit_verification_code">We will send you the 6 digit verification code</string>
    <string name="country_code">Country Code</string>
    <string name="mobile_no">Mobile No</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="home">Home</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_orders">My Orders</string>
    <string name="my_address">My Address</string>
    <string name="my_profile">My Profile</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact us</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="terms_amp_conditions"><![CDATA[terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="description">Description</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="related_products">Related Products</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="log_in_to_your_existing_account">Log in to your existing account</string>
    <string name="email_mobile_no">Email - Mobile No</string>
    <string name="forgot_password">Forgot Password!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="order_id">Order ID:</string>
    <string name="date">Date:</string>
    <string name="qty">QTY:</string>
    <string name="timeslot">TimeSlot:</string>
    <string name="address">Address:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="delivery">Delivery:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="wallet_discount">wallet Discount</string>
    <string name="you_need_to_pickup_order_by_seller_shop_seller_address_">You need to pickup order by seller shop Seller address you can find on contact page</string>
    <string name="write_a_product_review">Write a product review</string>
    <string name="tell_us_wh">Tell us what you like or dislike about this product</string>
    <string name="very_like_it">Very like it</string>
    <string name="good">Good</string>
    <string name="not_good">Not Good</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="copy">Copy</string>
    <string name="invite_friends_now">Invite friends now</string>
    <string name="select_your_area">Select Your Area</string>
    <string name="let_s_get_started">Let\'s get Started!</string>
    <string name="create_an_account_on_to_use_all_nthe_features">Create an account on to use all \nthe features</string>
    <string name="referral_code">Referral Code (optional)</string>
    <string name="by_signing_up_yo">By signing up, you agree to our Terms and Policy</string>
    <string name="sign_up">Sign Up</string>
    <string name="if_you_have_an_account">If you have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="refill_balance">Refill Balance</string>
    <string name="refill_amount">Refill Amount:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="pay_now">Pay Now</string>
    <string name="search">Search..</string>
    <string name="add">Add</string>
    <string name="info">Info</string>
    <string name="add_another_address">Add another address</string>
    <string name="total_item">Total Item</string>
    <string name="totals">Totals :</string>
    <string name="order">Order</string>
    <string name="stay_home_nfood_amp_groceries"><![CDATA[Stay Home \nFood & Groceries]]></string>
    <string name="view_all">View all</string>
    <string name="want_to_shop_for">Want to shop for</string>
    <string name="three_easy_steps">Three Easy Steps</string>
    <string name="order_directly_n">Order directly\n from \nthe application</string>
    <string name="your_order_n_will_be">Your Order\n will be\nsent by our courier</string>
    <string name="your_door_n_to">Your Door \n to \nEnjoy Groceries</string>
    <string name="we_re_undergoing_a_bit_of">We\'re undergoing a bit of scheduled maintenance.</string>
    <string name="sorry_for_the_inconvenience">Sorry for the inconvenience. We\'ll be backup and running as fast as possible.</string>
    <string name="select_grocery_item">Select Grocery Item</string>
    <string name="order_grocery_and_get_delivery_in_the_fastest_ntime">Order grocery and get delivery in the fastest\ntime in the town</string>
    <string name="order_directly_from_the_napplication">Order directly from the\nApplication</string>
    <string name="fresh_amp_best_quality"><![CDATA[Fresh & Best Quality Products.\nOrder your products at any time]]></string>
    <string name="get_the_fastest_delivery">Get the Fastest Delivery</string>
    <string name="we_will_delivery">We will delivery them directly\nto your home</string>
    <string name="view_cart">View Cart</string>
    <string name="wallet_amount">Wallet Amount</string>
    <string name="discount">Discount</string>
    <string name="my_current_address">My Current Address</string>
    <string name="change">Change</string>
    <string name="place_order">Place order</string>
    <string name="congratulation">Congratulation!</string>
    <string name="thank_you_for">Thank you for ordering. We received your\norder and will begin processing it soon.</string>
    <string name="track_your_or">Track your order</string>
    <string name="delivery_by">Delivery By</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="ends_in">Ends in</string>
    <string name="language">Language</string>
    <string name="servicetax">Service Tax(</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->

</resources>
