<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true"
    tools:context=".activity.SingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/let_s_get_started"
            android:textColor="@color/colorBalck"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/colorGrey1"
            android:text="@string/create_an_account_on_to_use_all_nthe_features"
            android:textSize="16sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_access_account" />

        <View
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/ed_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_editetext"
                    android:drawableLeft="@drawable/ic_perm_"
                    android:drawablePadding="10dp"
                    android:hint="@string/ename"
                    android:padding="12dp"
                    android:textColor="@color/colorGrey2"
                    android:textColorHint="@color/colorGrey" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_editetext"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:padding="12dp"
                    android:textColor="@color/colorGrey2"
                    android:textColorHint="@color/colorGrey" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.2"
                    android:background="@drawable/rounded_editetext">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:prompt="@string/spinner_title" />
                </LinearLayout>

                <View
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

                <EditText
                    android:id="@+id/ed_alternatmob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_phone"
                    android:background="@drawable/rounded_editetext"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    android:padding="12dp"
                    android:textColor="@color/colorGrey2"
                    android:textColorHint="@color/colorGrey" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_editetext"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textColor="@color/colorGrey2"
                    android:textColorHint="@color/colorGrey" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/ed_refercode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_editetext"
                    android:drawableLeft="@drawable/ic_baseline_code"
                    android:drawablePadding="10dp"
                    android:hint="@string/referral_code"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@color/colorGrey2"
                    android:textColorHint="@color/colorGrey" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrey1"
                android:layout_marginLeft="8dp"
                android:text="@string/by_signing_up_yo" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rounded_green2"
                android:elevation="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/btn_sign"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_green2"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/if_you_have_an_account"
                android:textColor="@color/colorGrey2" />

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/login_here"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>