<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.WalletActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/wallet_round"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_wallet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="1dp"
                android:text="@string/my_wallet"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="$1000"
                android:textColor="@color/colorBalck"
                android:textSize="24dp"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/refill_balance"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        android:gravity="center|left"
                        android:padding="2dp"
                        android:text="@string/refill_amount"
                        android:textColor="@color/colorBalck"
                        android:textSize="18dp" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="1dp" />

                    <EditText
                        android:id="@+id/ed_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_editetext"
                        android:inputType="number"
                        android:padding="12dp"
                        android:textColor="@color/colorGrey2"
                        android:textColorHint="@color/colorGrey" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|left"
                    android:padding="5dp"
                    android:text="@string/payment_method"
                    android:textColor="@color/colorBalck"
                    android:textSize="18dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_editetext"
                    android:padding="5dp">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="fill_parent"
                        android:layout_height="32dp"
                        android:prompt="@string/spinner_title" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="52dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"

                    android:layout_marginRight="20dp"
                    android:background="@drawable/rounded_green2"
                    android:elevation="10dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_pay"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_green2"
                        android:gravity="center"
                        android:text="@string/pay_now"
                        android:textColor="@color/colorWhite"
                        android:textSize="18dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>